--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,6 +24,14 @@ $rhap_font-family: inherit !default;
   }
 }
 
+.dark_container {
+  background-color: black !important;
+}
+
+.light_container {
+  background-color: white !important;
+}
+
 .rhap_header {
   margin-bottom: 10px;
 }
@@ -41,6 +49,9 @@ $rhap_font-family: inherit !default;
 .rhap_stacked {
   .rhap_controls-section {
     margin-top: 8px;
+    display: flex !important;
+    justify-content: center !important;
+    margin-bottom: 30px !important;
   }
 }
 
@@ -49,6 +60,9 @@ $rhap_font-family: inherit !default;
 
   .rhap_controls-section {
     margin-left: 8px;
+    display: flex !important;
+    justify-content: center !important;
+    margin-bottom: 30px !important;
   }
 }
 
@@ -57,6 +71,9 @@ $rhap_font-family: inherit !default;
 
   .rhap_controls-section {
     margin-right: 8px;
+    display: flex !important;
+    justify-content: center !important;
+    margin-bottom: 30px !important;
   }
 }
 
@@ -65,6 +82,9 @@ $rhap_font-family: inherit !default;
 
   .rhap_controls-section {
     margin-bottom: 8px;
+    display: flex !important;
+    justify-content: center !important;
+    margin-bottom: 30px !important;
   }
 }
 
@@ -72,6 +92,7 @@ $rhap_font-family: inherit !default;
   display: flex;
   flex: 3 1 auto;
   align-items: center;
+  margin-bottom: 30px !important;
 }
 
 .rhap_progress-container {
@@ -97,14 +118,23 @@ $rhap_font-family: inherit !default;
   -webkit-user-select: none;
 }
 
+.rhap_controls_dark {
+  color: #F5F5F5 !important;
+}
+
+.rhap_controls_light {
+  color: black !important;
+}
+
 .rhap_progress-bar {
   box-sizing: border-box;
   position: relative;
   z-index: 0;
   width: 100%;
-  height: 5px;
   background-color: $rhap_bar-color;
-  border-radius: 2px;
+  margin: 0 15px !important;
+  border-radius: 1px;
+  height: 2px;
 }
 
 .rhap_progress-filled {
@@ -113,6 +143,14 @@ $rhap_font-family: inherit !default;
   z-index: 2;
   background-color: $rhap_theme-color;
   border-radius: 2px;
+}
+
+.rhap_progress_dark {
+  background-color: #F5F5F5 !important;
+}
+
+.rhap_progress_light {
+  background-color: black !important;
 }
 
 .rhap_progress-bar-show-download {
@@ -145,12 +183,16 @@ $rhap_font-family: inherit !default;
   flex: 1 1 auto;
   justify-content: space-between;
   align-items: center;
+  display: flex !important;
+  justify-content: center !important;
+  margin-bottom: 30px !important;
 }
 
 .rhap_additional-controls {
   display: flex;
   flex: 1 0 auto;
   align-items: center;
+  display: none !important;
 }
 
 .rhap_repeat-button {
@@ -180,7 +222,7 @@ $rhap_font-family: inherit !default;
   font-size: 40px;
   width: 40px;
   height: 40px;
-  
+  margin: 0 30px !important;
 }
 
 .rhap_volume-controls {
@@ -188,6 +230,7 @@ $rhap_font-family: inherit !default;
   flex: 1 0 auto;
   justify-content: flex-end;
   align-items: center;
+  display: none !important;
 }
 
 .rhap_volume-button {
